methods.basics.MethodsDogHouse.scala.error
Erreur de compilation :
MethodsDogHouse:1: error: not found: value dogHouse
dogHouse(){
^MethodsDogHouse:17: error: not found: value dogHouse
    dogHouse();
    ^MethodsDogHouse:24: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:30: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:40: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:50: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:21: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.MethodsDogHouse'
	override def run() {
                     ^