methods.basics.MethodsDogHouse.scala.code
dogHouse(){
  for (i<-1 to 7)
  {
    avance()
  }
  gauche()
    for (i<-1 to 7)
  {
    avance()
  }
  droite()
}

def run()
{for(x <- 1 to 7)
	{
  	dogHouse();
	}} 